# tui2048

./: .gitignore  CMakeLists.txt  Changelog.md  LICENSE  Makefile  Makefile.own  README.md
doc/: Big-Picture.md  Releasing.md  ToDo.md
src/: 2048config.h.in  2048tui.cpp  board.cpp  board.h  global.cpp  global.h
tests/: boardtest.cpp  boardtest.h  test.cpp
